@@ -62,6 +62,7 @@ t/corpus/good_dk_3.txt
 t/corpus/good_dk_4.txt
 t/corpus/good_dk_5.txt
 t/corpus/good_dk_6.txt
+t/corpus/good_dk_7.txt
 t/corpus/good_rfc4871_3.txt
 t/corpus/dk_headers_1.txt
 t/corpus/dk_headers_2.txt
